Fixed ArgvInputTest